fix: Achievements display on mobile

--- a/source/templates/classic/style.css
+++ b/source/templates/classic/style.css
@@ -1018,6 +1018,7 @@
     border-radius: 16px;
     font-size: 10px;
     padding: 0 5px;
+    white-space: nowrap;
   }
   .achievement .gauge-base, .achievement .gauge-arc {
     stroke-width: 6;
